fix bug bad sign
