# models/new_appointment_subject.go
@@ -1,0 +1,52 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/swag"
+)
+
+// NewAppointmentSubject new appointment subject
+// swagger:model NewAppointmentSubject
+type NewAppointmentSubject struct {
+
+	// appointment date
+	Comments string `json:"comments,omitempty"`
+
+	// Doctor ID
+	DoctorID string `json:"doctorId,omitempty"`
+
+	// Patient ID
+	PatientID string `json:"patientId,omitempty"`
+
+	// Patient PubKey
+	PubKey string `json:"pubKey,omitempty"`
+}
+
+// Validate validates this new appointment subject
+func (m *NewAppointmentSubject) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *NewAppointmentSubject) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *NewAppointmentSubject) UnmarshalBinary(b []byte) error {
+	var res NewAppointmentSubject
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
