# restapi/operations/clinic/book_new_medical_appointment_responses.go
@@ -1,0 +1,130 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package clinic
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/ccamaleon5/SaludChainClient/models"
+)
+
+// BookNewMedicalAppointmentOKCode is the HTTP code returned for type BookNewMedicalAppointmentOK
+const BookNewMedicalAppointmentOKCode int = 200
+
+/*BookNewMedicalAppointmentOK successful operation
+
+swagger:response bookNewMedicalAppointmentOK
+*/
+type BookNewMedicalAppointmentOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Credential `json:"body,omitempty"`
+}
+
+// NewBookNewMedicalAppointmentOK creates BookNewMedicalAppointmentOK with default headers values
+func NewBookNewMedicalAppointmentOK() *BookNewMedicalAppointmentOK {
+
+	return &BookNewMedicalAppointmentOK{}
+}
+
+// WithPayload adds the payload to the book new medical appointment o k response
+func (o *BookNewMedicalAppointmentOK) WithPayload(payload *models.Credential) *BookNewMedicalAppointmentOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the book new medical appointment o k response
+func (o *BookNewMedicalAppointmentOK) SetPayload(payload *models.Credential) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *BookNewMedicalAppointmentOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// BookNewMedicalAppointmentBadRequestCode is the HTTP code returned for type BookNewMedicalAppointmentBadRequest
+const BookNewMedicalAppointmentBadRequestCode int = 400
+
+/*BookNewMedicalAppointmentBadRequest Invalid data supplied
+
+swagger:response bookNewMedicalAppointmentBadRequest
+*/
+type BookNewMedicalAppointmentBadRequest struct {
+}
+
+// NewBookNewMedicalAppointmentBadRequest creates BookNewMedicalAppointmentBadRequest with default headers values
+func NewBookNewMedicalAppointmentBadRequest() *BookNewMedicalAppointmentBadRequest {
+
+	return &BookNewMedicalAppointmentBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *BookNewMedicalAppointmentBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// BookNewMedicalAppointmentNotFoundCode is the HTTP code returned for type BookNewMedicalAppointmentNotFound
+const BookNewMedicalAppointmentNotFoundCode int = 404
+
+/*BookNewMedicalAppointmentNotFound Resource doesn't exist
+
+swagger:response bookNewMedicalAppointmentNotFound
+*/
+type BookNewMedicalAppointmentNotFound struct {
+}
+
+// NewBookNewMedicalAppointmentNotFound creates BookNewMedicalAppointmentNotFound with default headers values
+func NewBookNewMedicalAppointmentNotFound() *BookNewMedicalAppointmentNotFound {
+
+	return &BookNewMedicalAppointmentNotFound{}
+}
+
+// WriteResponse to the client
+func (o *BookNewMedicalAppointmentNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
+
+// BookNewMedicalAppointmentInternalServerErrorCode is the HTTP code returned for type BookNewMedicalAppointmentInternalServerError
+const BookNewMedicalAppointmentInternalServerErrorCode int = 500
+
+/*BookNewMedicalAppointmentInternalServerError Error Internal Server
+
+swagger:response bookNewMedicalAppointmentInternalServerError
+*/
+type BookNewMedicalAppointmentInternalServerError struct {
+}
+
+// NewBookNewMedicalAppointmentInternalServerError creates BookNewMedicalAppointmentInternalServerError with default headers values
+func NewBookNewMedicalAppointmentInternalServerError() *BookNewMedicalAppointmentInternalServerError {
+
+	return &BookNewMedicalAppointmentInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *BookNewMedicalAppointmentInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
