# swagger/swaggerui/swagger.json
@@ -268,6 +268,50 @@
         }
       }
     },
+    "/clinic/medicalappointment/create": {
+      "post": {
+        "tags": [
+          "clinic"
+        ],
+        "summary": "Create New Medical Appointment",
+        "description": "This service is responsible for book a medical appointment, that through multi signature contract, how proof blockchain generates a credential about this contract to share information with clinic",
+        "operationId": "bookNewMedicalAppointment",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Created health credential object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/NewAppointmentSubject"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Credential"
+            }
+          },
+          "400": {
+            "description": "Invalid data supplied"
+          },
+          "404": {
+            "description": "Resource doesn't exist"
+          },
+          "500": {
+            "description": "Error Internal Server"
+          }
+        }
+      }
+    },
     "/clinic/medicalappointment": {
       "post": {
         "tags": [
@@ -578,6 +622,33 @@
         "date": {
           "type": "string",
           "format": "date-time",
+          "description": "appointment date"
+        }
+      },
+      "example": {
+        "hashCredential": "3c9f6UAYaIJsXUJDIM7lb2+tTW1ukkhnhwzDnC9h9Ksx2UtndRxAhoTyxPPGM",
+        "patientPublicKey": "0xA12543122BB32323AD233D232AEE233232FF87675E23AD23CB092",
+        "doctorPublicKey": "0xB986AB2343CDD332EE2345FA442776EFAA5663D567E5342FA3232A",
+        "date": "2019-08-08T19:23:24Z"
+      }
+    },
+    "NewAppointmentSubject": {
+      "type": "object",
+      "properties": {
+        "patientId": {
+          "type": "string",
+          "description": "Patient ID"
+        },
+        "doctorId": {
+          "type": "string",
+          "description": "Doctor ID"
+        },
+        "pubKey": {
+          "type": "string",
+          "description": "Patient PubKey"
+        },
+        "comments": {
+          "type": "string",
           "description": "appointment date"
         }
       },
